--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Primary Meta Tags -->
+<title>Eliseo | Digital Strategist</title>
+<meta name="title" content="Eliseo | Digital Strategist">
+<meta name="description" content="Arquitectura web premium y soluciones de IA para marcas de élite.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://dub.sh/eliseo">
+<meta property="og:title" content="Eliseo | Digital Strategist">
+<meta property="og:description" content="Arquitectura web premium y soluciones de IA para marcas de élite.">
+<meta property="og:image" content="TU_LOGO_LINK_AQUÍ">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://dub.sh/eliseo">
+<meta property="twitter:title" content="Eliseo | Digital Strategist">
+<meta property="twitter:description" content="Arquitectura web premium y soluciones de IA para marcas de élite.">
+<meta property="twitter:image" content="https://github.com/chomp-best/tarjetadepresentiacion/blob/main/preview.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eliseo | Digital Strategist — Pro</title>
@@ -199,3 +217,4 @@
     </script>
 </body>
 </html>
+
