--- a/index.html
+++ b/index.html
@@ -2,23 +2,24 @@
 <html lang="es">
 <head>
     <!-- Primary Meta Tags -->
-<title>Eliseo | Digital Strategist</title>
-<meta name="title" content="Eliseo | Digital Strategist">
-<meta name="description" content="Arquitectura web premium y soluciones de IA para marcas de élite.">
+    <title>Eliseo | Digital Strategist</title>
+    <meta name="title" content="Eliseo | Digital Strategist">
+    <meta name="description" content="Arquitectura web premium y soluciones de IA para marcas de élite.">
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://dub.sh/eliseo">
-<meta property="og:title" content="Eliseo | Digital Strategist">
-<meta property="og:description" content="Arquitectura web premium y soluciones de IA para marcas de élite.">
-<meta property="og:image" content="https://raw.githubusercontent.com/chomp-best/VC/main/preview.png">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dub.sh/eliseo">
+    <meta property="og:title" content="Eliseo | Digital Strategist">
+    <meta property="og:description" content="Arquitectura web premium y soluciones de IA para marcas de élite.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/chomp-best/VC/main/preview.png">
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://dub.sh/eliseo">
-<meta property="twitter:title" content="Eliseo | Digital Strategist">
-<meta property="twitter:description" content="Arquitectura web premium y soluciones de IA para marcas de élite.">
-<meta property="twitter:image" content="https://raw.githubusercontent.com/chomp-best/VC/main/preview.png">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://dub.sh/eliseo">
+    <meta property="twitter:title" content="Eliseo | Digital Strategist">
+    <meta property="twitter:description" content="Arquitectura web premium y soluciones de IA para marcas de élite.">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/chomp-best/VC/main/preview.png">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eliseo | Digital Strategist — Pro</title>
@@ -169,7 +170,7 @@
 
         <!-- Buttons Section -->
         <div class="space-y-4">
-            <!-- ✨ Link actualizado a la Consultoría IA -->
+            <!-- Link a la Consultoría IA -->
             <a href="https://chomp-best.github.io/ia/" target="_blank" class="ai-button flex items-center justify-center w-full py-4 rounded-2xl text-[15px] font-semibold gap-2">
                 <span>✨ Consultoría IA Instantánea</span>
             </a>
@@ -194,8 +195,13 @@
         <!-- Footer / Social -->
         <div class="mt-14 pt-8 border-t border-[#1c1c1e] flex justify-between items-center">
             <div class="flex space-x-6 text-[#a1a1a6]">
-                <a href="#" class="hover:text-white transition-colors"><i class="fa-brands fa-instagram text-lg"></i></a>
-                <a href="#" class="hover:text-white transition-colors"><i class="fa-brands fa-linkedin-in text-lg"></i></a>
+                <!-- Enlace de Instagram actualizado -->
+                <a href="https://www.instagram.com/eliseoooook/" target="_blank" class="hover:text-white transition-colors">
+                    <i class="fa-brands fa-instagram text-lg"></i>
+                </a>
+                <a href="#" class="hover:text-white transition-colors">
+                    <i class="fa-brands fa-linkedin-in text-lg"></i>
+                </a>
             </div>
             <p class="text-[9px] text-[#424245] font-bold tracking-[0.2em] uppercase">E. Strategy 2025</p>
         </div>
@@ -217,5 +223,3 @@
     </script>
 </body>
 </html>
-
-
