--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <span class="text-black text-3xl font-light tracking-tighter">e.</span>
             </div>
             <h1 class="text-4xl font-semibold tracking-tight text-gradient mb-2">Eliseo</h1>
-            <p class="text-[12px] font-semibold tracking-[0.2em] text-[#a1a1a6] uppercase">Consultor Digital Premium</p>
+            <p class="text-[12px] font-semibold tracking-[0.2em] text-[#a1a1a6] uppercase">Arquitectura Digital Premium</p>
         </div>
 
         <!-- Misión -->
@@ -118,7 +118,7 @@
             <div class="reveal">
                 <p class="text-[10px] font-bold text-[#0071e3] uppercase tracking-widest mb-1">Misión</p>
                 <p class="text-[13px] text-gray-300 leading-relaxed font-light">
-                    Soy un <span class="text-white font-medium">Consultor Digital</span> de 19 años. Me especializo en crear <span class="text-white font-medium">Web Apps de estética Premium</span> para negocios que buscan profesionalizar su imagen y automatizar sus ventas. 
+                    Soy un <span class="text-white font-medium">Arquitecto digital</span> de 19 años. Me especializo en crear <span class="text-white font-medium">Web Apps de estética Premium</span> para negocios que buscan profesionalizar su imagen y automatizar sus ventas. 
                 </p>
             </div>
             <div class="reveal">
@@ -223,3 +223,4 @@
     </script>
 </body>
 </html>
+
