--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         }
 
         .glass-nav.scrolled > div > div {
-            background-color: rgba(0, 0, 0, 0.5);
-            backdrop-filter: blur(40px);
-            -webkit-backdrop-filter: blur(40px);
-            border-color: rgba(255, 255, 255, 0.2);
+            background-color: rgba(0, 0, 0, 0.3); 
+            backdrop-filter: blur(50px);
+            -webkit-backdrop-filter: blur(50px);
+            border-color: rgba(255, 255, 255, 0.15);
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
         }
 
@@ -73,7 +73,6 @@
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.6);
         }
 
-        /* Ocultar barra de scroll pero mantener funcionalidad */
         ::-webkit-scrollbar {
             width: 0px;
             background: transparent;
@@ -84,20 +83,21 @@
 
     <!-- Navegación -->
     <nav id="navbar" class="fixed top-0 w-full z-50 py-6 md:py-10 glass-nav">
-        <div class="max-w-7xl mx-auto px-6 md:px-8">
-            <div class="backdrop-blur-3xl bg-black/40 border border-white/20 rounded-full px-6 md:px-10 py-4 flex justify-between items-center transition-all duration-500">
+        <div class="max-w-7xl mx-auto px-4 md:px-8">
+            <div class="backdrop-blur-3xl bg-black/10 border border-white/10 rounded-full px-4 md:px-10 py-4 flex justify-between items-center transition-all duration-500">
                 <div class="flex items-center gap-2">
-                    <div class="w-8 h-8 bg-white rounded-lg flex items-center justify-center">
-                        <span class="text-black font-bold text-sm">e.</span>
+                    <div class="w-7 h-7 md:w-8 md:h-8 bg-white rounded-lg flex items-center justify-center">
+                        <span class="text-black font-bold text-xs md:text-sm">e.</span>
                     </div>
-                    <span class="font-semibold tracking-tighter text-lg md:text-xl uppercase">ELISEO STUDIO</span>
+                    <span class="font-semibold tracking-tighter text-sm md:text-xl uppercase hidden sm:block">ELISEO STUDIO</span>
                 </div>
-                <div class="hidden md:flex gap-10 text-[10px] font-bold tracking-[0.3em] text-[#86868B] uppercase">
+                <!-- Menú visible en mobile con enlaces corregidos -->
+                <div class="flex gap-4 md:gap-10 text-[8px] md:text-[10px] font-bold tracking-[0.2em] md:tracking-[0.3em] text-[#86868B] uppercase">
                     <a href="#mision" class="hover:text-white transition-colors">Misión</a>
-                    <a href="#ia" class="hover:text-white transition-colors">IA Instantánea</a>
-                    <a href="#contacto" class="hover:text-white transition-colors">Infraestructura</a>
+                    <a href="#ia" class="hover:text-white transition-colors">IA</a>
+                    <a href="#servicios" class="hover:text-white transition-colors">Infraestructura</a>
                 </div>
-                <a href="https://wa.me/543795041420" target="_blank" class="bg-white text-black px-5 md:px-6 py-2 rounded-full text-[11px] font-bold hover:bg-[#F5F5F7] transition-all">
+                <a href="https://wa.me/543795041420" target="_blank" class="bg-white text-black px-4 md:px-6 py-2 rounded-full text-[10px] md:text-[11px] font-bold hover:bg-[#F5F5F7] transition-all">
                     CONTACTO
                 </a>
             </div>
@@ -119,7 +119,7 @@
             <div class="flex flex-col md:flex-row gap-6 justify-center opacity-0 animate-slide-up delay-400">
                 <a href="#contacto" class="bg-[#0071E3] text-white px-10 py-5 rounded-full text-lg font-medium hover:bg-[#0077ED] transition-all flex items-center justify-center gap-2 group shadow-lg shadow-[#0071E3]/20">
                     Iniciar Proyecto
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 group-hover:translate-x-1 group-hover:-translate-y-1 transition-transform" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 group-hover:translate-y-1 transition-transform" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><polyline points="19 12 12 19 5 12"></polyline></svg>
                 </a>
                 <a href="https://chomp-best.github.io/proyectos/" target="_blank" class="bg-transparent border border-[#333336] text-white px-10 py-5 rounded-full text-lg font-medium hover:bg-[#1C1C1E] transition-all flex items-center justify-center">
                     Explorar Demos
@@ -179,7 +179,7 @@
         </div>
     </section>
 
-    <!-- Servicios Section -->
+    <!-- Servicios Section (Infraestructura Funcional) -->
     <section id="servicios" class="py-[10rem] px-8 max-w-7xl mx-auto">
         <div class="mb-20">
             <span class="text-[10px] font-bold tracking-[0.5em] text-[#0071E3] uppercase mb-4 block">Ecosistemas</span>
@@ -206,7 +206,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg>
                 </div>
                 <div class="w-14 h-14 bg-[#1C1C1E] rounded-2xl flex items-center justify-center mb-8 group-hover:bg-white transition-colors duration-500">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="text-white group-hover:text-black w-6 h-6" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="5" y="2" width="14" height="20" rx="2" ry="2"/><line x1="12" y1="18" x2="12.01" y2="18"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="text-white group-hover:text-black w-6 h-6" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 19l7-7 3 3-7 7-3-3z"></path><path d="M18 13l-1.5-7.5L2 2l3.5 14.5L13 18l5-5z"></path><path d="M2 2l7.586 7.586"></path><circle cx="11" cy="11" r="2"></circle></svg>
                 </div>
                 <span class="text-[10px] font-bold tracking-[0.5em] text-[#0071E3] uppercase mb-4 block">Experiencia</span>
                 <h3 class="text-2xl font-semibold mb-4 tracking-tight">Arquitectura UX Pro</h3>
@@ -236,11 +236,14 @@
         </div>
         
         <div class="grid md:grid-cols-2 gap-8">
-            <a href="https://wa.me/543795041420?text=Hola%20Eliseo,%20vi%20tu%20tarjeta%20digital%20y%20me%20gustaría%20iniciar%20un%20proyecto%20contigo." target="_blank" class="flex flex-col items-center justify-center p-12 bg-[#0A0A0A] border border-[#1C1C1E] rounded-[40px] hover:border-[#333336] transition-all group">
+            <a href="https://wa.me/543795041420?text=Hola%20Eliseo,%20vi%20tu%20tarjeta%20digital%20y%20me%20gustaría%20iniciar%20un%20proyecto%20contigo." target="_blank" class="flex flex-col items-center justify-center p-12 bg-[#0A0A0A] border border-[#1C1C1E] rounded-[40px] hover:border-[#333336] transition-all group relative">
+                <div class="absolute top-0 right-0 p-8 opacity-0 group-hover:opacity-100 transition-opacity">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="5" x2="12" y2="19"></line><polyline points="19 12 12 19 5 12"></polyline></svg>
+                </div>
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12 text-[#0071E3] mb-6 group-hover:scale-110 transition-transform" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 1 1-7.6-11.7 8.38 8.38 0 0 1 3.8.9L21 3z"/></svg>
                 <h3 class="text-2xl font-semibold mb-2">WhatsApp Directo</h3>
                 <p class="text-[#86868B] mb-8">Consultas de infraestructura inmediata.</p>
-                <span class="text-white font-medium flex items-center gap-2">Iniciar conversación <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline></svg></span>
+                <span class="text-white font-medium flex items-center gap-2">Iniciar conversación <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="5" x2="12" y2="19"></line><polyline points="19 12 12 19 5 12"></polyline></svg></span>
             </a>
 
             <a href="https://chomp-best.github.io/proyectos/" target="_blank" class="flex flex-col items-center justify-center p-12 bg-[#0A0A0A] border border-[#1C1C1E] rounded-[40px] hover:border-[#333336] transition-all group">
@@ -295,7 +298,6 @@
     </footer>
 
     <script>
-        // Lógica de Scroll para Navbar
         const navbar = document.getElementById('navbar');
         window.addEventListener('scroll', () => {
             if (window.scrollY > 20) {
@@ -305,7 +307,6 @@
             }
         });
 
-        // Descarga de vCard
         function downloadVCard() {
             const vcard = "BEGIN:VCARD\nVERSION:3.0\nFN:Eliseo Consultor Digital\nTEL;TYPE=CELL:+543795041420\nTITLE:Consultor Digital\nEND:VCARD";
             const blob = new Blob([vcard], { type: "text/vcard" });
