--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <p class="text-[#86868B] text-xl font-light mb-12 leading-relaxed">
                         Acceda a nuestra infraestructura de inteligencia para optimizar sus procesos de venta y atención al cliente en tiempo real.
                     </p>
-                    <a href="https://chomp-best.github.io/ia/" target="_blank" class="inline-flex items-center gap-3 bg-white text-black px-10 py-5 rounded-full text-lg font-bold hover:bg-[#F5F5F7] transition-all group">
+                    <a href="https://chomp-best.github.io/gestor-ia/" target="_blank" class="inline-flex items-center gap-3 bg-white text-black px-10 py-5 rounded-full text-lg font-bold hover:bg-[#F5F5F7] transition-all group">
                         Acceder al Consultor IA
                         <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 group-hover:rotate-12 transition-transform" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"></path></svg>
                     </a>
@@ -323,3 +323,4 @@
 
 </body>
 </html>
+
