--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eliseo Studio | Arquitectura Digital</title>
-    <meta name="description" content="Arquitectura de autoridad para marcas de élite. Sistemas de IA y diseño premium.">
+    <meta name="description" content="Arquitectura de autoridad para marcas de élite. Sistemas de diseño premium e infraestructura digital.">
     
     <!-- Fuentes e Iconos -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -91,10 +91,8 @@
                     </div>
                     <span class="font-semibold tracking-tighter text-sm md:text-xl uppercase hidden sm:block">ELISEO STUDIO</span>
                 </div>
-                <!-- Menú visible en mobile con enlaces corregidos -->
                 <div class="flex gap-4 md:gap-10 text-[8px] md:text-[10px] font-bold tracking-[0.2em] md:tracking-[0.3em] text-[#86868B] uppercase">
                     <a href="#mision" class="hover:text-white transition-colors">Misión</a>
-                    <a href="#ia" class="hover:text-white transition-colors">IA</a>
                     <a href="#servicios" class="hover:text-white transition-colors">Infraestructura</a>
                 </div>
                 <a href="https://wa.me/543795041420" target="_blank" class="bg-white text-black px-4 md:px-6 py-2 rounded-full text-[10px] md:text-[11px] font-bold hover:bg-[#F5F5F7] transition-all">
@@ -153,28 +151,6 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 12V8H6a2 2 0 0 1-2-2c0-1.1.9-2 2-2h12v4"></path><path d="M4 6v12c0 1.1.9 2 2 2h14v-4"></path><path d="M18 12a2 2 0 0 0-2 2c0 1.1.9 2 2 2h4v-4h-4z"></path></svg>
                     Guardar contacto en Wallet
                 </button>
-            </div>
-        </div>
-    </section>
-
-    <!-- IA Section -->
-    <section id="ia" class="py-[10rem] px-8 bg-[#0A0A0A]">
-        <div class="max-w-7xl mx-auto">
-            <div class="bg-gradient-to-br from-[#1C1C1E] to-[#000000] border border-[#333336] rounded-[40px] p-10 md:p-20 relative overflow-hidden group">
-                <div class="absolute -right-20 -top-20 opacity-10 group-hover:opacity-20 transition-opacity">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="text-white" width="400" height="400" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"><path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"></path><path d="m5 3 1 2"></path><path d="m19 21 1-2"></path><path d="m5 21 1-2"></path><path d="m19 3 1-2"></path></svg>
-                </div>
-                <div class="relative z-10 max-w-3xl">
-                    <span class="text-[10px] font-bold tracking-[0.5em] text-[#0071E3] uppercase mb-6 block">Consultoría Estratégica</span>
-                    <h2 class="text-4xl md:text-6xl font-bold tracking-tight mb-8">Escale su operación con IA Instantánea.</h2>
-                    <p class="text-[#86868B] text-xl font-light mb-12 leading-relaxed">
-                        Acceda a nuestra infraestructura de inteligencia para optimizar sus procesos de venta y atención al cliente en tiempo real.
-                    </p>
-                    <a href="https://chomp-best.github.io/gestor-ia/" target="_blank" class="inline-flex items-center gap-3 bg-white text-black px-10 py-5 rounded-full text-lg font-bold hover:bg-[#F5F5F7] transition-all group">
-                        Acceder al Consultor IA
-                        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 group-hover:rotate-12 transition-transform" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"></path></svg>
-                    </a>
-                </div>
             </div>
         </div>
     </section>
@@ -320,7 +296,5 @@
             window.URL.revokeObjectURL(url);
         }
     </script>
-
 </body>
 </html>
-
