--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <div class="flex gap-4 md:gap-10 text-[8px] md:text-[10px] font-bold tracking-[0.2em] md:tracking-[0.3em] text-[#86868B] uppercase">
                     <a href="#mision" class="hover:text-white transition-colors">Misión</a>
                     <a href="#servicios" class="hover:text-white transition-colors">Infraestructura</a>
+                    <a href="#capacidades" class="hover:text-white transition-colors">Capacidades</a>
                 </div>
                 <a href="https://wa.me/543795041420" target="_blank" class="bg-white text-black px-4 md:px-6 py-2 rounded-full text-[10px] md:text-[11px] font-bold hover:bg-[#F5F5F7] transition-all">
                     CONTACTO
@@ -200,6 +201,51 @@
                 <span class="text-[10px] font-bold tracking-[0.5em] text-[#0071E3] uppercase mb-4 block">Estrategia</span>
                 <h3 class="text-2xl font-semibold mb-4 tracking-tight">Estrategia de Crecimiento</h3>
                 <p class="text-[#86868B] text-lg font-light leading-relaxed">Modelos de escalabilidad diseñados para negocios B2B y Retail que requieren autoridad digital.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Capacidades Técnicas Section -->
+    <section id="capacidades" class="py-[10rem] px-8 bg-[#050505]">
+        <div class="max-w-7xl mx-auto">
+            <div class="mb-20 text-center">
+                <span class="text-[10px] font-bold tracking-[0.5em] text-[#0071E3] uppercase mb-4 block">Atributos de Despliegue</span>
+                <h2 class="text-4xl md:text-6xl font-bold tracking-tight mb-6">Ingeniería de Autoridad.</h2>
+                <p class="text-[#86868B] text-xl font-light max-w-3xl mx-auto">Componentes de alta fidelidad integrados en cada activo digital para maximizar la tracción del negocio.</p>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div class="bg-[#0A0A0A] border border-[#1C1C1E] p-10 rounded-[40px] hover:border-[#333336] transition-all group">
+                    <h3 class="text-xl font-semibold text-white mb-4 flex items-center gap-3">
+                        <span class="w-1.5 h-1.5 bg-[#0071E3] rounded-full"></span>
+                        Interacción Omnicanal Directa
+                    </h3>
+                    <p class="text-[#86868B] font-light leading-relaxed">Integración de canales de comunicación cifrada (WhatsApp/Telegram) para una sincronización instantánea entre el lead y la marca.</p>
+                </div>
+
+                <div class="bg-[#0A0A0A] border border-[#1C1C1E] p-10 rounded-[40px] hover:border-[#333336] transition-all group">
+                    <h3 class="text-xl font-semibold text-white mb-4 flex items-center gap-3">
+                        <span class="w-1.5 h-1.5 bg-[#0071E3] rounded-full"></span>
+                        Geolocalización Dinámica Integrada
+                    </h3>
+                    <p class="text-[#86868B] font-light leading-relaxed">Implementación de cartografía interactiva para validación física y optimización del posicionamiento local estratégico.</p>
+                </div>
+
+                <div class="bg-[#0A0A0A] border border-[#1C1C1E] p-10 rounded-[40px] hover:border-[#333336] transition-all group">
+                    <h3 class="text-xl font-semibold text-white mb-4 flex items-center gap-3">
+                        <span class="w-1.5 h-1.5 bg-[#0071E3] rounded-full"></span>
+                        Nodos de Conversión de Alta Tasa
+                    </h3>
+                    <p class="text-[#86868B] font-light leading-relaxed">Botones de acción (CTAs) diseñados bajo principios de jerarquía visual y psicología del comportamiento para maximizar el ROI.</p>
+                </div>
+
+                <div class="bg-[#0A0A0A] border border-[#1C1C1E] p-10 rounded-[40px] hover:border-[#333336] transition-all group">
+                    <h3 class="text-xl font-semibold text-white mb-4 flex items-center gap-3">
+                        <span class="w-1.5 h-1.5 bg-[#0071E3] rounded-full"></span>
+                        Captación de Datos Estructurada
+                    </h3>
+                    <p class="text-[#86868B] font-light leading-relaxed">Interfaces de entrada optimizadas para la recolección de activos de usuario mediante formularios de fricción reducida.</p>
+                </div>
             </div>
         </div>
     </section>
