--- a/index.html
+++ b/index.html
@@ -108,18 +108,18 @@
                     <a href="#servicios" class="hover:text-white transition-colors">Infraestructura</a>
                     <a href="#capacidades" class="hover:text-white transition-colors">Capacidades</a>
                 </div>
-                <!-- Botón de contacto oculto en móviles (se mueve a la isla dinámica inferior) -->
-                <a href="https://wa.me/543795041420" target="_blank" class="hidden md:flex bg-white text-black px-4 md:px-6 py-2 rounded-full text-[10px] md:text-[11px] font-bold hover:bg-[#F5F5F7] transition-all">
+                <!-- Botón de contacto redirigido al Forum -->
+                <a href="https://chomp-best.github.io/forum/" class="hidden md:flex bg-white text-black px-4 md:px-6 py-2 rounded-full text-[10px] md:text-[11px] font-bold hover:bg-[#F5F5F7] transition-all">
                     CONTACTO
                 </a>
             </div>
         </div>
     </nav>
 
-    <!-- Isla Dinámica de Contacto (Mobile Only) -->
+    <!-- Isla Dinámica de Contacto (Mobile Only) redirigida al Forum -->
     <div class="fixed bottom-8 left-1/2 -translate-x-1/2 z-[60] md:hidden w-auto">
         <div class="mobile-island bg-white/90 border border-white/20 rounded-full p-1 shadow-2xl animate-pulse-glow">
-            <a href="https://wa.me/543795041420" target="_blank" class="flex items-center gap-3 px-6 py-3 bg-black rounded-full text-[11px] font-bold tracking-widest text-white uppercase whitespace-nowrap">
+            <a href="https://chomp-best.github.io/forum/" class="flex items-center gap-3 px-6 py-3 bg-black rounded-full text-[11px] font-bold tracking-widest text-white uppercase whitespace-nowrap">
                 <span>INICIAR PROYECTO</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="text-white"><path d="M22 2L11 13"></path><path d="M22 2l-7 20-4-9-9-4 20-7z"></path></svg>
             </a>
@@ -139,7 +139,8 @@
                 Convertimos el potencial de su negocio en una <span class="text-white font-normal">infraestructura digital</span> de alto rendimiento.
             </p>
             <div class="flex flex-col md:flex-row gap-6 justify-center opacity-0 animate-slide-up delay-400">
-                <a href="#contacto" class="bg-[#0071E3] text-white px-10 py-5 rounded-full text-lg font-medium hover:bg-[#0077ED] transition-all flex items-center justify-center gap-2 group shadow-lg shadow-[#0071E3]/20">
+                <!-- Botón de Hero redirigido al Forum -->
+                <a href="https://chomp-best.github.io/forum/" class="bg-[#0071E3] text-white px-10 py-5 rounded-full text-lg font-medium hover:bg-[#0077ED] transition-all flex items-center justify-center gap-2 group shadow-lg shadow-[#0071E3]/20">
                     Iniciar Proyecto
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 group-hover:translate-y-1 transition-transform" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="5" x2="12" y2="19"></line><polyline points="19 12 12 19 5 12"></polyline></svg>
                 </a>
@@ -281,14 +282,15 @@
         </div>
         
         <div class="grid md:grid-cols-2 gap-8">
-            <a href="https://wa.me/543795041420?text=Hola%20Eliseo,%20vi%20tu%20tarjeta%20digital%20y%20me%20gustaría%20iniciar%20un%20proyecto%20contigo." target="_blank" class="flex flex-col items-center justify-center p-12 bg-[#0A0A0A] border border-[#1C1C1E] rounded-[40px] hover:border-[#333336] transition-all group relative">
+            <!-- Bloque de redirección directa al Forum -->
+            <a href="https://chomp-best.github.io/forum/" class="flex flex-col items-center justify-center p-12 bg-[#0A0A0A] border border-[#1C1C1E] rounded-[40px] hover:border-[#333336] transition-all group relative">
                 <div class="absolute top-0 right-0 p-8 opacity-0 group-hover:opacity-100 transition-opacity">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="5" x2="12" y2="19"></line><polyline points="19 12 12 19 5 12"></polyline></svg>
                 </div>
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-12 h-12 text-[#0071E3] mb-6 group-hover:scale-110 transition-transform" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 1 1-7.6-11.7 8.38 8.38 0 0 1 3.8.9L21 3z"/></svg>
-                <h3 class="text-2xl font-semibold mb-2">WhatsApp Directo</h3>
-                <p class="text-[#86868B] mb-8">Consultas de infraestructura inmediata.</p>
-                <span class="text-white font-medium flex items-center gap-2">Iniciar conversación <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="5" x2="12" y2="19"></line><polyline points="19 12 12 19 5 12"></polyline></svg></span>
+                <h3 class="text-2xl font-semibold mb-2">Iniciar Proyecto</h3>
+                <p class="text-[#86868B] mb-8">Despliegue de infraestructura inmediata.</p>
+                <span class="text-white font-medium flex items-center gap-2">Completar Formulario <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="12" y1="5" x2="12" y2="19"></line><polyline points="19 12 12 19 5 12"></polyline></svg></span>
             </a>
 
             <a href="https://chomp-best.github.io/proyectos/" target="_blank" class="flex flex-col items-center justify-center p-12 bg-[#0A0A0A] border border-[#1C1C1E] rounded-[40px] hover:border-[#333336] transition-all group">
